# volumeleaders-rs

./: .coderabbit.yaml  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  SKILL.md  cliff.toml  codecov.yml  dist-workspace.toml  release-plz.toml  renovate.json
.github/instructions/: release-plz.instructions.md  release.instructions.md
.github/workflows/: audit.yml  cd.yml  ci.yml  release-plz.yml  release.yml
agent/: AGENTS.md  CHANGELOG.md  Cargo.toml
agent/src/: cli.rs  lib.rs  main.rs  output.rs
agent/src/commands/: alert.rs  completions.rs  market.rs  mod.rs  report.rs  scaffold.rs  trade.rs  volume.rs  watchlist.rs
agent/src/commands/trade/: dashboard.rs  filters.rs  presets.rs  sentiment.rs
agent/src/common/: auth.rs  dates.rs  format.rs  mod.rs  tickers.rs  trade_transforms.rs  types.rs
client/: AGENTS.md  CHANGELOG.md  Cargo.toml
client/src/: alerts.rs  auth.rs  client.rs  clusters.rs  datatables.rs  earnings.rs  error.rs  executive_summary.rs  levels.rs  lib.rs  test_support.rs  trades.rs  volume.rs  watchlists.rs
client/src/models/: alert.rs  cluster.rs  earning.rs  level.rs  mod.rs  trade.rs  watchlist.rs
client/tests/fixtures/: trade_level_touches_response.json  trades_get_trades_response.json  volume_response.json  welcome_trade_clusters_response.json  welcome_trades_response.json
docs/superpowers/specs/: 2026-06-17-volumeleaders-skills-design.md
examples/: rookie_spike.rs
skills/volumeleaders/: SKILL.md
src/: alerts.rs  auth.rs  browser_auth.rs  cache.rs  client.rs  clusters.rs  config.rs  datatables.rs  earnings.rs  error.rs  executive_summary.rs  levels.rs  lib.rs  login.rs  main.rs  session.rs  test_support.rs  trades.rs  volume.rs  watchlists.rs
src/cli/: args.rs  command_examples.rs  command_list.rs  doctor.rs  dry_run.rs  error.rs  field_metadata.rs  help.rs  logging.rs  mod.rs  output.rs  output_tests.rs  schema.rs  schema_tests.rs
src/cli/commands/: alert.rs  alert_tests.rs  fields.rs  market.rs  mod.rs  report.rs  report_tests.rs  scaffold.rs  trade.rs  trade_tests.rs  volume.rs  watchlist.rs  watchlist_tests.rs
src/cli/commands/trade/: dashboard.rs  filters.rs  sentiment.rs
src/cli/common/: auth.rs  dates.rs  mod.rs  trade_record_kind.rs  trade_transforms.rs  types.rs
src/cli/field_metadata/: tables.rs
src/models/: cluster.rs  exhaustion.rs  mod.rs  types.rs
tests/: cli_aliases.rs  cli_commands.rs  cli_doctor.rs  cli_fields.rs  cli_fields_examples.rs  cli_help.rs  cli_schema.rs  cli_verbosity.rs
tests/fixtures/: earnings_response.json  trade_cluster_bombs_response.json  trade_clusters_response.json  trade_levels_response.json
