[package]
name = "rusty-volumeleaders"
version = "0.7.2"
edition = "2024"
rust-version = "1.96"
publish = true
description = "Browser-session API client and CLI for VolumeLeaders data"
license = "Apache-2.0"
repository = "https://github.com/major/volumeleaders-rs"
readme = "README.md"

[[bin]]
name = "volumeleaders-agent"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:clap", "dep:clap_complete", "dep:tracing-subscriber"]
test-support = []

[lints.rust]
unused = { level = "deny", priority = -1 }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"], optional = true }
clap_complete = { version = "4", optional = true }
dirs = "6"
reqwest = { version = "0.13", features = ["cookies", "gzip", "json", "multipart"] }
rust_decimal = { version = "1", features = ["serde-float"] }
scraper = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"], optional = true }
url = "2"

[dev-dependencies]
mockito = "=1.7.2"

# Config for 'dist'
[profile.dist]
inherits = "release"
lto = "thin"
