[package]
name = "volumeleaders-agent"
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
volumeleaders-client = { path = "../client" }
