[package]
name = "volumeleaders-agent"
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"
publish = true
description = "Agent-oriented CLI for VolumeLeaders data"
license = "Apache-2.0"
repository = "https://github.com/major/volumeleaders-rs"
readme = "../README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
volumeleaders-client = { version = "0.1.0", path = "../client" }
