[package]
name = "volumeleaders-client"
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"
publish = false

[features]
test-support = []

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.13", features = ["cookies", "json", "multipart"] }
rookie = "0.5"
scraper = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt"] }
tracing = "0.1"
url = "2"

[dev-dependencies]
mockito = "=1.7.2"
